# whalesynth

./: CMakeLists.txt  README
presets/: CMakeLists.txt
src/: GeonSynth.h  Note.h  Synthesizer.cpp  Synthesizer.h  SynthesizerVoice.cpp  SynthesizerVoice.h
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  OperatorModel.cpp  OperatorModel.h  OperatorView.cpp  OperatorView.h  SynthesizerModel.cpp  SynthesizerModel.h  TopMenu.cpp  TopMenu.h  WaveGeneratorModel.cpp  WaveGeneratorModel.h  WaveGeneratorView.cpp  WaveGeneratorView.h  WhaleWidget.cpp  WhaleWidget.h
src/gui/resources/: resources.rc
src/plugin/: CMakeLists.txt
src/plugin/lv2/: CMakeLists.txt  LV2SynthesizerModelProxy.cpp  LV2SynthesizerModelProxy.h  SynthesizerModelProxyLv2.cpp  SynthesizerModelProxyLv2.h  SynthesizerProxyLv2.cpp  SynthesizerProxyLv2.h  UridMap.h  geonsynth.ttl  geonsynth_dsp.ttl  geonsynth_lv2.cpp  geonsynth_lv2_dsp.cpp  geonsynth_lv2_ui.cpp  manifest.ttl  whalesynth_dsp.ttl  whalesynth_lv2_dsp.cpp  whalesynth_lv2_ui.cpp
src/standalone/: CMakeLists.txt  Jack.cpp  Jack.h  SynthesizerProxyStandalone.cpp  SynthesizerProxyStandalone.h  main.cpp
src/synth/: CMakeLists.txt  GeonSynth.h  Note.h  Operator.cpp  Operator.h  Oscillator.cpp  Oscillator.h  Synthesizer.cpp  Synthesizer.h  SynthesizerProxy.h  SynthesizerVoice.cpp  SynthesizerVoice.h  WaveGenerator.cpp  WaveGenerator.h  WhaleSynth.h
standalone/: CMakeLists.txt  main.cpp
