cmake_minimum_required (VERSION 3.7)

project(whalesynth VERSION 1.0.0)

option(WHALE_STANDALONE "Enable build for standalone" OFF)
option(WHALE_PLUGIN "Enable build for plugin" ON)
if (WHALE_PLUGIN)
  option(WHALE_PLUGIN_LV2 "Enable build LV2 plugin" ON)
  if (WHALE_VST_SDK_PATH)
    option(WHALE_PLUGIN_VST "Enable build VST plugin" ON)
  else(WHALE_VST_SDK_PATH)
    option(WHALE_PLUGIN_VST "Enable build VST plugin" OFF)
  endif (WHALE_VST_SDK_PATH)
endif (WHALE_PLUGIN)

set(WHALE_SYNTH_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/synth)
set(WHALE_GUI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/gui)
set(WHALE_STANDALONE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/standalone)
set(WHALE_PLUGIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/plugin)
set(WHALE_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data)
set(WHALE_PRESETS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/presets)
set(WHALE_DOC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/doc)
if (WHALE_PLUGIN)
  if (WHALE_PLUGIN_VST)
    set(WHALE_VST_DIR ${WHALE_PLUGIN_DIR}/vst)
  endif (WHALE_PLUGIN_VST)
  if (WHALE_PLUGIN_LV2)
    set(WHALE_LV2_DIR ${WHALE_PLUGIN_DIR}/lv2)
  endif (WHALE_PLUGIN_LV2)
endif(WHALE_PLUGIN)

if (NOT CMAKE_BUILD_TYPE)
  message(STATUS "no build type selected, set default to Release")
  set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type Release" FORCE)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-Wall ${CMAKE_CXX_FLAGS} -fvisibility=hidden")
set(CMAKE_C_FLAGS "-Wall ${CMAKE_C_FLAGS} -fvisibility=hidden")

if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set (CMAKE_INSTALL_PREFIX "/usr/local" CACHE PATH "default install path" FORCE)
endif()

if (NOT CMAKE_INSTALL_FULL_DATADIR)
  message(STATUS "CMAKE_INSTALL_FULL_DATADIR is not set, use default ${CMAKE_INSTALL_PREFIX}/share")
  set(CMAKE_INSTALL_FULL_DATADIR "${CMAKE_INSTALL_PREFIX}/share" CACHE PATH "default data dir path" FORCE)
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWHALESYNTH_DATA_DIR=\\\"${CMAKE_INSTALL_FULL_DATADIR}\\\"")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DWHALESYNTH_DATA_DIR=\\\"${CMAKE_INSTALL_FULL_DATADIR}\\\"")

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
  message(STATUS "Enable application logging")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWHALESYNTH_DEBUG")
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DWHALESYNTH_DEBUG")
endif()

find_package(PkgConfig REQUIRED)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
add_definitions(-fPIC)

add_subdirectory(${WHALE_SYNTH_DIR})
add_subdirectory(${WHALE_GUI_DIR})

if (WHALE_STANDALONE)
  add_subdirectory(${WHALE_STANDALONE_DIR})
endif (WHALE_STANDALONE)

if (WHALE_PLUGIN)
  add_subdirectory(${WHALE_PLUGIN_DIR})
endif (WHALE_PLUGIN)

add_subdirectory(data)
add_subdirectory(presets)

message(STATUS "------------ Summary ---------")
if (WHALE_STANDALONE)
  message(STATUS "Standalone: yes" )
else(WHALE_STANDALONE)
  message(STATUS "Standalone: no")
endif(WHALE_STANDALONE)

if (WHALE_PLUGIN_LV2)
  message(STATUS "LV2 plugin: yes" )
else(WHALE_PLUGIN_LV2)
  message(STATUS "LV2 plugin: no")
endif(WHALE_PLUGIN_LV2)

if (WHALE_PLUGIN_VST)
  message(STATUS "VST plugin: yes" )
else(WHALE_PLUGIN_VST)
  message(STATUS "VST plugin: no")
endif(WHALE_PLUGIN_VST)

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
  message(STATUS "Debug enabled: yes" )
else()
  message(STATUS "Debug enabled: no" )
endif()
message(STATUS "------------------------------")
